name:                oni-tech
version:             0.1.0
homepage:            https://github.com/oni-tech/oni-tech.github.io#readme
license:             BSD3
license-file:        LICENSE
author:              Tim McGilchrist <timmcgil@gmail.com>
maintainer:          Tim McGilchrist <timmcgil@gmail.com>
copyright:           2020 Tim McGilchrist
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable site
  hs-source-dir:       main
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       
                       base      >= 4.6  && < 5
                     , binary    >= 0.5  && < 0.9
                     , directory >= 1.2  && < 1.4
                     , filepath  >= 1.3  && < 1.5
                     , hakyll    
                     -- , hakyll    >= 4.10 && < 4.13
                     , hakyll-sass
                     , pandoc    >= 2.0  && < 2.5
                     , process   >= 1.6  && < 1.7
                     , text      >= 1.2  && < 1.3
    
